--- a/web/index.html
+++ b/web/index.html
@@ -292,7 +292,7 @@
             </div>
         </div>
     </div>
-    <script src="processor.js" type="module"></script>
+    <script src="main.js" type="module"></script>
     <script>
         // Initialize dark mode
         const themeToggle = document.getElementById('themeToggle');
